force-app/main/default/objects/T2E__c/T2E__c.object-meta.xml
<CustomObject>
    <description>Registers a specific tacit knowledge of someone&#39;s brain into the database making it explicit</description>
    <label>T2E</label>
    <nameField>
        <label>Knowledge</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T2E</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>