force-app/main/default/objects/T2E__c/fields/KeyWords__c.field-meta.xml
<CustomField>
    <fullName>KeyWords__c</fullName>
    <label>Key-Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>