force-app/main/default/objects/T2E__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>EmployeeId__c</columns>
    <columns>KnowledgeArea__c</columns>
    <columns>Title__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>KeyWords__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>